# cirrus

./: .cirrus.yml  CMakeLists.txt  build.bat  build.py  build.sh  conanfile.txt  package.py  publish.py  readme.md
src/donalonzo/: hello_world.cpp  hello_world.hpp
tests/: catch.hpp  hello_world.cpp
toolchains/: Darwin-ios.profile.conan  Darwin-ios.toolchain.cmake
